--- a/TextMining.ipynb
+++ b/TextMining.ipynb
@@ -28,7 +28,7 @@
    },
    "outputs": [],
    "source": [
-    "dt = pd.read_csv(os.path.join(\"/Users/cengjianhuan/Documents/Fall2017/BigDataAnalysics/Project/RawData\", 'HotelsReviews.csv'))"
+    "dt = pd.read_csv(os.path.join(\"/Users/Project/RawData\", 'HotelsReviews.csv'))"
    ]
   },
   {
